--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+# === Node.js ===
 node_modules/
+.env
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# === Logs ===
+logs
+*.log
+*.log.*
+
+# === Optional OS/System Files ===
+Thumbs.db
+*.swp
+
+# === Optional Editor Files ===
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# === Build/Compiled Files (if any) ===
+dist/
+build/
+
+# === Optional for frontend tools ===
+.cache/
+.next/
+out/
